--- a/sustainPage.html
+++ b/sustainPage.html
@@ -142,14 +142,13 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Brands</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="brands-item">
                         <a class="brands-link" data-toggle="modal" href="#brandsModal1">
                             <div class="brands-hover">
-                                <div class="brands-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="brands-hover-content">Learn more</div>
                             </div>
                             <img class="img-fluid" src="assets/img/brands/01-thumbnail.jpg" alt="" />
                         </a>
@@ -162,7 +161,7 @@
                     <div class="brands-item">
                         <a class="brands-link" data-toggle="modal" href="#brandsModal2">
                             <div class="brands-hover">
-                                <div class="brands-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="brands-hover-content">Learn more</div>
                             </div>
                             <img class="img-fluid" src="assets/img/brands/02-thumbnail.jpg" alt="" />
                         </a>
@@ -176,7 +175,7 @@
                     <div class="brands-item">
                         <a class="brands-link" data-toggle="modal" href="#brandsModal3">
                             <div class="brands-hover">
-                                <div class="brands-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="brands-hover-content">Learn more</div>
                             </div>
                             <img class="img-fluid" src="assets/img/brands/03-thumbnail.jpg" alt="" />
                         </a>
@@ -190,7 +189,7 @@
                     <div class="brands-item">
                         <a class="brands-link" data-toggle="modal" href="#brandsModal4">
                             <div class="brands-hover">
-                                <div class="brands-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="brands-hover-content">Learn more</div>
                             </div>
                             <img class="img-fluid" src="assets/img/brands/04-thumbnail.jpg" alt="" />
                         </a>
@@ -204,7 +203,7 @@
                     <div class="brands-item">
                         <a class="brands-link" data-toggle="modal" href="#brandsModal5">
                             <div class="brands-hover">
-                                <div class="brands-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="brands-hover-content">Learn more</div>
                             </div>
                             <img class="img-fluid" src="assets/img/brands/05-thumbnail.jpg" alt="" />
                         </a>
@@ -218,7 +217,7 @@
                     <div class="brands-item">
                         <a class="brands-link" data-toggle="modal" href="#brandsModal6">
                             <div class="brands-hover">
-                                <div class="brands-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="brands-hover-content">Learn more</div>
                             </div>
                             <img class="img-fluid" src="assets/img/brands/06-thumbnail.jpg" alt="" />
                         </a>
