--- a/sustainPage.html
+++ b/sustainPage.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="masthead-subheading">Sustainability Framework</div>
             <div class="masthead-heading text-uppercase">What is sustainable fashion?</div>
-            <a class="btn  btn-success btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
+            <a class="btn  btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
         </div>
     </header>
     <!-- About-->
@@ -101,7 +101,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg"
+                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/5.jpg"
                             alt="" /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -116,7 +116,7 @@
                     </div>
                 </li>
                 <li class="timeline-inverted">
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg"
+                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/6.jpg"
                             alt="" /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -230,39 +230,41 @@
         </div>
         </div>
     </section>
-    <!-- Services-->
-    <section class="page-section" id="services">
+    <!-- Our values-->
+    <section class="page-section" id="values">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Services</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading text-uppercase">Our values</h2>
+                <h3 class="section-subheading text-muted">FIND GREAT ADVENTURES, ONE OF A KIND LIFESTYLE AND INSPIRATION
+                    WITH US!</h3>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i
-                            class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i></span>
-                    <h4 class="my-3">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+                            class="fas fa-shield-alt fa-stack-1x fa-inverse"></i></span>
+                    <h4 class="my-3">Reliable</h4>
+                    <p class="text-muted">Our promise at Ethically is that we know where from the products are. We have
+                        gathered, with great care, the sustainable brands in one place for you.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i
-                            class="fas fa-laptop fa-stack-1x fa-inverse"></i></span>
-                    <h4 class="my-3">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+                            class="fas fa-heart fa-stack-1x fa-inverse"></i></span>
+                    <h4 class="my-3">Together</h4>
+                    <p class="text-muted">We believe that everyday decisions matter.
+                        We believe that co-operation takes far.
+                        We believe that together we are bigger.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i
-                            class="fas fa-lock fa-stack-1x fa-inverse"></i></span>
-                    <h4 class="my-3">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+                            class="fas fa-compass fa-stack-1x fa-inverse"></i></span>
+                    <h4 class="my-3">Adventurous</h4>
+                    <p class="text-muted">At Ethically lifestyle is all about adventures. We have the willpower, the
+                        vivid imagination and the courage to do things differently! .</p>
                 </div>
             </div>
         </div>
     </section>
-  
+
     <!-- Footer-->
     <!-- brands Modals-->
     <!-- Modal 1-->
@@ -366,59 +368,59 @@
             </div>
         </div>
     </div>
-        <!-- Modal 5-->
-        <div class="brands-modal modal fade" id="brandsModal5" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">BEEN LONDON</h2>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/brands/05-full.jpg" alt="" />
-                                    <p>Designed and made in the best city on Earth, BEEN is very much inspired by the
-                                        London
-                                        lifestyle. All of our pieces are named after our favourite areas of East London.
-                                        This is where the brand was born, and it’s where we go to work every day.</p>
-                                </div>
+    <!-- Modal 5-->
+    <div class="brands-modal modal fade" id="brandsModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here-->
+                                <h2 class="text-uppercase">BEEN LONDON</h2>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/brands/05-full.jpg" alt="" />
+                                <p>Designed and made in the best city on Earth, BEEN is very much inspired by the
+                                    London
+                                    lifestyle. All of our pieces are named after our favourite areas of East London.
+                                    This is where the brand was born, and it’s where we go to work every day.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Modal 6-->
-        <div class="brands-modal modal fade" id="brandsModal6" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">BRAVA FABRICS</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/brands/06-full.jpg" alt="" />
-                                    <p>Modern, conscious, fair: We believe in a sustainable future and take
-                                        responsibility
-                                        for our environment. For us, fashion is more than just seasonal it-pieces. We
-                                        are
-                                        not chasing the latest trends - our goal is to create timeless and durable
-                                        pieces
-                                        that are made to last.</p>
-                                </div>
+    </div>
+    <!-- Modal 6-->
+    <div class="brands-modal modal fade" id="brandsModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here-->
+                                <h2 class="text-uppercase">BRAVA FABRICS</h2>
+                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/brands/06-full.jpg" alt="" />
+                                <p>Modern, conscious, fair: We believe in a sustainable future and take
+                                    responsibility
+                                    for our environment. For us, fashion is more than just seasonal it-pieces. We
+                                    are
+                                    not chasing the latest trends - our goal is to create timeless and durable
+                                    pieces
+                                    that are made to last.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    </div>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
