--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 </head>
 
 <body id="page-top">
-    <!-- Navigation-->
-
+   
     <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#"> 
@@ -71,7 +70,7 @@
   <!-- navbar end  -->
 
     <!-- Masthead-->
-    <header class="masthead">
+    <header class="mastheadlanding">
         <div class="container">
             <div class="masthead-heading">Sustainable fashion getting bigger</div>
             <a class="btn  btn-success btn-xl text-uppercase js-scroll-trigger" href="#">Shop new arrivals</a>
@@ -88,7 +87,7 @@
             We are extremely grateful for all the experts who have shared their knowledge to us considering 
             materials and environmental aspects.</div>
       <div class="col-md-5 order-md-1">
-        <img class="featurette-image img-fluid mx-auto" img src="./assets/img/lending_page_pics/pc-l1-special-collections-hero-marimekko.jpg" alt="image">
+        <img class="featurette-image img-fluid mx-auto" img src="./assets/img/landing_page_pics/pc-l1-special-collections-hero-marimekko.jpg" alt="image">
       </div>
     </div>
 </div>
@@ -105,7 +104,7 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="first-slide" src="./assets/img/lending_page_pics/blue-2564660_1280.jpg" alt="First slide">
+              <img class="first-slide" src="./assets/img/landing_page_pics/blue-2564660_1280.jpg" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
                         <h3 class="mb-0 font-italic">"Easy to shop, fast delivery, love my new shirt!"</h3>
@@ -115,7 +114,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="second-slide" src="./assets/img/lending_page_pics/dress-864107_1280.jpg" alt="Second slide">
+              <img class="second-slide" src="./assets/img/landing_page_pics/dress-864107_1280.jpg" alt="Second slide">
               <div class="container">
                 <div class="carousel-caption text-left">
                     <h3 class="mb-0 font-italic">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
@@ -125,7 +124,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="third-slide" src="./assets/img/lending_page_pics/person-918986_1280.jpg" alt="Third slide">
+              <img class="third-slide" src="./assets/img/landing_page_pics/person-918986_1280.jpg" alt="Third slide">
               <div class="container">
                 <div class="carousel-caption text-left">
                     <h3 class="mb-0 font-italic">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
@@ -156,14 +155,14 @@
            <p class="text-muted">Subscribe to our email letters and get 10% discount for your next order. We will send you information on special offers and information about new trends.</p>
            <form action="#" method="Post">
                <input type="text" name="text" placeholder="Enter Your Email">
-               <button type="button" class="btn btn-success">Subscribe</button>
+               <a href="#" class="btn btn-primary">Subscribe</a> 
            </form>
            <p class="text-muted"> By clicking “Subscribe” you accepting our <a href="#" target="_blank" class="text-dark font-italic">terms & conditions</a></p>
        </div>
    </section>
 </div>
      <div class="col-md-5 order-md-1">
-       <img class="featurette-image img-fluid mx-auto" img src="./assets/img/lending_page_pics/1_EOlso4Gk882xoAi6o1Wt_A.jpeg" alt="image">
+       <img class="featurette-image img-fluid mx-auto" img src="./assets/img/landing_page_pics/1_EOlso4Gk882xoAi6o1Wt_A.jpeg" alt="image">
      </div>
    </div>
 </div>
@@ -242,13 +241,13 @@
                         <a href="#">Women</a>
                       </li>
                       <li>
-                        <a href="#">Susutainability</a>
+                        <a href="#">Sustainability</a>
                       </li>
                       <li>
-                        <a href="#">Our brends</a>
+                        <a href="#">Our brands</a>
                       </li>
                       <li>
-                        <a href="#">Our auditing process for brends</a>
+                        <a href="#">Our auditing process for brands</a>
                       </li>
                     </ul>
                   </div>
