navigation is Ok, man page added and pictures

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Women</a>
+          <a class="nav-link" href="womanPage.html">Women</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Men</a>
+          <a class="nav-link" href="menPage.html">Men</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">New in</a>
@@ -45,7 +45,7 @@
           <a class="nav-link" href="#">Inspiration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About sustainability</a>
+          <a class="nav-link" href="sustainPage.html">About sustainability</a>
         </li>
       </ul>
   
