--- a/menPage.html
+++ b/menPage.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Women</title>
+  <title>Men</title>
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
@@ -38,10 +38,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="womanPage.html">Women</a>
+          <a class="nav-link" href="womanPage.html">Woman</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="menPage.html">Men</a>
+          <a class="nav-link active" href="menPage.html">Men</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">New in</a>
@@ -50,7 +50,7 @@
           <a class="nav-link" href="#">Inspiration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="sustainPage.html">About sustainability</a>
+          <a class="nav-link" href="sustainPage.html">About sustainability</a>
         </li>
       </ul>
 
@@ -94,9 +94,9 @@
 
       <div class="col-lg-9">
 
-       
+
         <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel" style="width:100%;
-        height:360px; position : relative">  
+        height:360px; position : relative">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -104,13 +104,13 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="assets/img/women/1.jpg" alt="First slide" style = "height: 60%;" > 
-                        </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="assets/img/women/2.jpg" alt="Second slide" style = "height: 60%;">
+              <img class="d-block img-fluid" src="assets/img/man/1.jpg" alt="First slide" style="height: 60%;">
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="assets/img/women/3.jpg" alt="Third slide" style = "height: 60%;">
+              <img class="d-block img-fluid" src="assets/img/man/2.jpg" alt="Second slide" style="height: 60%;">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="assets/img/man/3.jpg" alt="Third slide" style="height: 60%;">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -126,7 +126,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card mb-1 box-shadow w-100">
-              <img class="card-img-top" src="./assets/img/women/10.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./assets/img/man/10.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">item</a>
@@ -144,66 +144,14 @@
                   </div>
                 </div>
               </div>
-                <div class="card-footer">
-                  <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card mb-1 box-shadow w-100">
-              <img class="card-img-top" src="./assets/img/women/12.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">item</a>
-                </h4>
-                <h5>€ 90.99</h5>
-                <div class="d-flex justify-content-between align-items-center">
-                  <button type="button" class="btn btn-sm btn-secondary">Info</button>
-                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
-                  <div class="stamps m-1">
-                    <ul>
-                      <li><small class="text-muted">Organic cotton</small></li>
-                      <li> <small class="text-success">Made in EU</small></li>
-                      <li><small class="text-success">Fairtrade</small></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-                <div class="card-footer">
-                  <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card mb-1 box-shadow w-100">
-              <img class="card-img-top" src="./assets/img/women/5.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">item</a>
-                </h4>
-                <h5>€ 90.99</h5>
-                <div class="d-flex justify-content-between align-items-center">
-                  <button type="button" class="btn btn-sm btn-secondary">Info</button>
-                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
-                  <div class="stamps m-1">
-                    <ul>
-                      <li><small class="text-muted">Organic cotton</small></li>
-                      <li> <small class="text-success">Made in EU</small></li>
-                      <li><small class="text-success">Fairtrade</small></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-                <div class="card-footer">
-                  <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card mb-1 box-shadow w-100">
-              <img class="card-img-top" src="./assets/img/women/7.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./assets/img/man/12.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">item</a>
@@ -229,7 +177,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card mb-1 box-shadow w-100">
-              <img class="card-img-top" src="./assets/img/women/9.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./assets/img/man/5.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">item</a>
@@ -255,7 +203,59 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card mb-1 box-shadow w-100">
-              <img class="card-img-top" src="./assets/img/women/11.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./assets/img/man/7.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">item</a>
+                </h4>
+                <h5>€ 90.99</h5>
+                <div class="d-flex justify-content-between align-items-center">
+                  <button type="button" class="btn btn-sm btn-secondary">Info</button>
+                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
+                  <div class="stamps m-1">
+                    <ul>
+                      <li><small class="text-muted">Organic cotton</small></li>
+                      <li> <small class="text-success">Made in EU</small></li>
+                      <li><small class="text-success">Fairtrade</small></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card mb-1 box-shadow w-100">
+              <img class="card-img-top" src="./assets/img/man/9.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">item</a>
+                </h4>
+                <h5>€ 90.99</h5>
+                <div class="d-flex justify-content-between align-items-center">
+                  <button type="button" class="btn btn-sm btn-secondary">Info</button>
+                  <button type="button" class="btn btn-sm btn-primary">Add to cart</button>
+                  <div class="stamps m-1">
+                    <ul>
+                      <li><small class="text-muted">Organic cotton</small></li>
+                      <li> <small class="text-success">Made in EU</small></li>
+                      <li><small class="text-success">Fairtrade</small></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card mb-1 box-shadow w-100">
+              <img class="card-img-top" src="./assets/img/man/11.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">item</a>
@@ -280,7 +280,7 @@
           </div>
         </div>
         <!-- /.row -->
-        
+
       </div>
       <!-- /.col-lg-9 -->
 
@@ -290,24 +290,27 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <section class="text-center p-5 mt-4">
-        <div class="container p-5">
+          <div class="container p-5">
             <h3>Would you like to get a 10% discount?</h3>
-            <p class="text-muted">Subscribe to our email letters and get 10% discount for your next order. We will send you information on special offers and information about new trends.</p>
+            <p class="text-muted">Subscribe to our email letters and get 10% discount for your next order. We will send
+              you information on special offers and information about new trends.</p>
             <form action="#" method="Post">
-                <input type="text" name="text" placeholder="Enter Your Email">
-                <a href="#" class="btn btn-primary">Subscribe</a> 
+              <input type="text" name="text" placeholder="Enter Your Email">
+              <a href="#" class="btn btn-primary">Subscribe</a>
             </form>
-            <p class="text-muted"> By clicking “Subscribe” you accepting our <a href="#" target="_blank" class="text-dark font-italic">terms & conditions</a></p>
-        </div>
-    </section>
-  </div>
+            <p class="text-muted"> By clicking “Subscribe” you accepting our <a href="#" target="_blank"
+                class="text-dark font-italic">terms & conditions</a></p>
+          </div>
+        </section>
+      </div>
       <div class="col-md-5 order-md-1">
-        <img class="featurette-image img-fluid mx-auto" img src="./assets/img/landing_page_pics/1_EOlso4Gk882xoAi6o1Wt_A.jpeg" alt="image">
+        <img class="featurette-image img-fluid mx-auto" img
+          src="./assets/img/man/16.jpg" alt="image">
       </div>
     </div>
   </div>
-  
- 
+
+
   <!-- /.container -->
 
   <!-- Bootstrap core JavaScript -->
@@ -351,7 +354,7 @@
                   <a href="#">Men</a>
                 </li>
                 <li>
-                  <a href="#">Women</a>
+                  <a href="#">man</a>
                 </li>
                 <li>
                   <a href="#">Sustainability</a>
