--- a/sustainPage.html
+++ b/sustainPage.html
@@ -23,7 +23,7 @@
     <!-- Navigation-->
    <!-- navbar -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"> 
+    <a class="navbar-brand" href="index.html"> 
       <img src="./assets/img/navbar_logo_icons/logo.png" width="100" height="30" class="d-inline-block align-top"> 
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,10 +32,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Women</a>
+          <a class="nav-link active" href="womanPage.html">Women</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Men</a>
+          <a class="nav-link" href="menPage.html">Men</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">New in</a>
@@ -44,7 +44,7 @@
           <a class="nav-link" href="#">Inspiration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About sustainability</a>
+          <a class="nav-link" href="sustainPage.html">About sustainability</a>
         </li>
       </ul>
   
@@ -177,7 +177,7 @@
                 </li>
                 <li class="timeline-inverted">
                     <div class="timeline-image">
-                        <h4>Be Part<br />Of Our<br />Story!</h4>
+                        <h4 style="color: white;">Be Part<br />Of Our<br />Story!</h4>
                     </div>
                 </li>
             </ul>
